styles.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
}

body{ 
    margin: 0px;
    padding: 0px;
    font-family: Arial, Helvetica, sans-serif
}

button{
    background-color: #3882F6;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 5px;
    color:  #F9FAF8;
    width: 15vw;
}
/*Header Styling*/
.header-section {
    background-color: #1F2937;
    height: auto;
    padding-bottom: 30px;
    
}
.header-top-container, .header-middle-container {
    margin-left: 10vw;
    margin-right: 10vw;
}

.header-middle-container {
    margin-top: 50px;
}
.top-bar {
    display: flex;
    justify-content: space-between;
    color: #F9FAF8;
}
.header-link-box {
    display: flex;
}
.header-link, .hero-text{
    color: #E5E7EB
}

.header-link {
    margin-left: 10px;
    margin-right: 10px;
    text-decoration: none;
}
.hero-box{
    display: flex;
}
.hero-text{
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-right: 50px;
}

.hero-main-text{
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}


/*Random Information Styling*/
.random-information-section{
    margin-top: 50px;
    margin-bottom: 50px;
}

.random-information-header{
    display: flex;
    justify-content: center;
    font-size: 20px;
}

.random-information-container{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    gap: 50px
}

.info-item{
    display: flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
    width: 90px;
    height: auto;
    font-size: 10px;
    text-align: center;
}

.info-img{
    border-radius: 5px;
    border: 2px solid blue
}

/*Quote Section*/

.quote-section{
    background-color: #E5E7EB;
    color: #1F2937;
}

.quote-container{
    padding: 100px;
    padding-left: 200px;
    padding-right: 200px;
}

.quote-text{
    font-size: 36px;
    font-style: italic;
}

.quote-author-wrapper{
    display: flex;
    justify-content: right;
    font-weight: bold;
    width: 90%;
    font-size: 24px;
    margin-top: 20px;

}

/* CTA Section */

.cta-container{
    display: flex;
    color: white;
    gap: 50px;
    background-color: #3882F6;
    margin: 50px;
    margin-left: 100px;
    margin-right: 100px;
    padding: 30px;
    padding-left: 100px;
    padding-right: 100px;
}

.cta-button{
    border: 2px solid white;
}

/* Footer section*/

.footer{
    color: white;
    display: flex;
    padding: 30px;
    align-items: center;
    justify-content: center;
    background-color: #1F2937;
}

